@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: canvasview.cpp,v 1.53 2004/01/09 16:56:24 squig Exp $
+ * $Id: canvasview.cpp,v 1.54 2004/01/18 23:15:11 squig Exp $
  *
  *****************************************************************************/
 
@@ -77,6 +77,8 @@ CanvasView::CanvasView(Project *project, GridCanvas *canvas, QWidget *parent,
     MainWindow::instance()->pasteAction()->addTo(popupMenu);
     popupMenu->insertSeparator();
     MainWindow::instance()->removeAction()->addTo(popupMenu);
+    popupMenu->insertSeparator();
+    MainWindow::instance()->saveToLibraryAction()->addTo(popupMenu);
     popupMenu->insertSeparator();
     MainWindow::instance()->showGridAction()->addTo(popupMenu);
 }
