@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: pinmodel.cpp,v 1.38 2004/01/17 12:03:04 squig Exp $
+ * $Id: pinmodel.cpp,v 1.39 2004/01/18 23:15:12 squig Exp $
  *
  *****************************************************************************/
 
@@ -105,7 +105,6 @@ PinModel *PinModel::connected()
 bool PinModel::isConnectable(PinModel *toPin)
 {
     return (this->connected_ == 0 && toPin->connected_ == 0
-            && this->bits() == toPin->bits()
             && (type() == EPISODIC
                 || toPin->type() == EPISODIC
                 || type() != toPin->type()));
@@ -177,7 +176,7 @@ unsigned int PinModel::bits()
 }
 
 PinView *PinModel::createView(BlockView *block,
-                  PinView::DockPosition dockPosition)
+                              PinView::DockPosition dockPosition)
 {
     view_ = new PinView(this, block, dockPosition);
     view_->show();
@@ -230,4 +229,9 @@ PinModel *PinModel::clone()
     pin->setId(id_);
     pin->setPosition(position_);
     return pin;
+}
+
+void PinModel::updatePerformed()
+{
+    emit(updated());
 }
